# CodeOrchester

./: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.claude/skills/linear-dev-manager/: SKILL.md
.claude/skills/linear-dev-manager/references/: label-catalog.md
dist-electron/: main.js  preload.js
docs/specs/: DAW-549-security-hardening-validacion-input.md  DAW-567-createagentmodal-pasos-2-3-edicion.md
e2e/: topology.spec.ts
electron/: main.ts  preload.ts  schemas.ts  tsconfig.json
rust-backend/: Cargo.toml  README.md
rust-backend/crates/claude-cli/: Cargo.toml
rust-backend/crates/claude-cli/src/: lib.rs
rust-backend/crates/ipc/: Cargo.toml
rust-backend/crates/ipc/src/: commands.rs  events.rs  handler.rs  lib.rs  server.rs
rust-backend/crates/ipc/tests/: smoke_test.rs
rust-backend/crates/minimax/: Cargo.toml
rust-backend/crates/minimax/src/: client.rs  error.rs  lib.rs  models.rs  retry.rs
rust-backend/crates/minimax/tests/: integration_test.rs
rust-backend/crates/pty-manager/: Cargo.toml
rust-backend/crates/pty-manager/src/: error.rs  lib.rs  manager.rs  session.rs
rust-backend/crates/pty-manager/tests/: integration_test.rs
rust-backend/crates/security/: Cargo.toml
rust-backend/crates/security/src/: lib.rs
rust-backend/crates/state/: Cargo.toml
rust-backend/crates/state/src/: entities.rs  events.rs  lib.rs  manager.rs  persistence.rs
rust-backend/crates/state/tests/: smoke_test.rs
rust-backend/src/: Cargo.toml  main.rs
skills/claude-code-superpowers/: SKILL.md
skills/playwright/: SKILL.md
src/: App.tsx  vite-env.d.ts
src/components/Layout/: MainStage.tsx  PanelArea.tsx  Sidebar.tsx  TitleBar.tsx
src/components/Screens/Agents/: AgentDashboard.tsx
src/components/Screens/Automations/: AutomationEditor.tsx
src/components/Screens/Chat/: AgentChat.tsx  OrchestrationChat.tsx
src/components/Screens/CodeMonitor/: CodeMonitor.tsx
src/components/Screens/Dashboard/: Dashboard.tsx
src/components/Screens/Settings/: Settings.tsx
src/components/Screens/Skills/: SkillConfig.tsx  SkillsLibrary.tsx
src/components/Screens/Topology/: Topology.tsx
src/components/Shared/: AgentAvatar.tsx  CreateAgentModal.tsx  GlassModal.tsx  NotificationsPanel.tsx  SkillBadge.tsx  StatusChip.tsx  ToastNotification.tsx
src/stores/: agentStore.ts  chatStore.ts  electronStorage.ts  freeConnectionStore.ts  index.ts  notificationStore.ts  skillStore.ts  teamStore.ts  terminalStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: daw-550-552-topology-connections.test.tsx  daw-551-chat-navigation.test.tsx  daw-564-topology-persistence-routing.test.tsx  daw-565-store-persistence.test.tsx  daw-567-createagentmodal.test.tsx  daw-568-stability.test.tsx  daw-569-agent-chat-pty.test.tsx  daw-569-orchestration-chat.test.tsx  daw-570-agent-heartbeat.test.tsx  daw-571-team-persistence.test.tsx  setup.ts
src/test/automations/: AutomationEditor.test.tsx
src/test/integration/: integration-audit.test.tsx
src/types/: index.ts
