[workspace]
members = [
    "src",
    "crates/pty-manager",
    "crates/claude-cli",
    "crates/minimax",
    "crates/ipc",
    "crates/state",
    "crates/security",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
thiserror   = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
regex       = "1"
