[package]
name    = "codeorchestra-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend entry-point for CodeOrchestra"

[[bin]]
name = "codeorchestra-backend"
path = "main.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

ipc      = { path = "../crates/ipc" }
state    = { path = "../crates/state" }
security = { path = "../crates/security" }
