[package]
name        = "claude-cli"
version     = "0.1.0"
edition     = "2021"
description = "Robust integration with the Claude CLI binary (DAW-547)"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
