[package]
name        = "ipc"
version     = "0.1.0"
edition     = "2021"
description = "WebSocket IPC layer between the Rust backend and Electron renderer (DAW-544)"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }

# WebSocket server / client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util      = "0.3"

[dev-dependencies]
tokio = { workspace = true }
