[package]
name = "minimax"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.5"
