[package]
name        = "minimax"
version     = "0.1.0"
edition     = "2021"
description = "MiniMax API client with rate-limiting and retry logic (DAW-548)"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }

# HTTP client for MiniMax REST API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { workspace = true }
