[package]
name = "pty-manager"
version = "0.1.0"
edition = "2021"
description = "Cross-platform PTY session manager for CodeOrchester using portable-pty"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
