[package]
name        = "security"
version     = "0.1.0"
edition     = "2021"
description = "Input validation, sanitisation, and security hardening (DAW-549)"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
regex      = { workspace = true }

[dev-dependencies]
