[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[[test]]
name = "smoke_test"
